[package]
name = "webcalc"
version = "1.0.0"
authors = ["W Brent Williams <wbrentwilliams@hotmail.com>"]
license = "MIT"
description = "Four function calculator built to run in a web browser via web assembly"
repository = "https://github.com/wbw1974/webcalc"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# pmdas dependencies
unicode-segmentation = "1.2.1"
regex = "1.1.6"

#wasm dependencies
cfg-if = "0.1.7"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.4", optional = true }
wasm-bindgen = "0.2.48"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlTextAreaElement',
  'Node',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.2.45"

[profile.release]
opt-level = "s"
